kubernetes/apollo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apollo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apollo-app
  template:
    metadata:
      labels:
        app: apollo-app
    spec:
      containers:
      - name: apollo-app
        image: au618687/apollo-app:latest
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            cpu: 200m
            memory: 300Mi
