kubernetes/apollo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apollo-service
spec:
  type: ClusterIP
  selector:
    app: apollo-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4000
